[SYNCOPE-1531] Console support