@@ -22,6 +22,7 @@ import de.agilecoders.wicket.core.markup.html.bootstrap.dialog.Modal;
 import java.io.Serializable;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Date;
 import java.util.List;
@@ -29,9 +30,8 @@ import java.util.stream.Collectors;
 import org.apache.commons.lang3.tuple.Triple;
 import org.apache.syncope.client.console.PreferenceManager;
 import org.apache.syncope.client.console.SyncopeConsoleSession;
+import org.apache.syncope.client.console.SyncopeWebApplication;
 import org.apache.syncope.client.console.commons.AnyDataProvider;
-import org.apache.syncope.client.ui.commons.Constants;
-import org.apache.syncope.client.ui.commons.status.ConnObjectWrapper;
 import org.apache.syncope.client.console.rest.AbstractAnyRestClient;
 import org.apache.syncope.client.console.wicket.extensions.markup.html.repeater.data.table.AttrColumn;
 import org.apache.syncope.client.console.wicket.extensions.markup.html.repeater.data.table.BooleanPropertyColumn;
@@ -40,9 +40,11 @@ import org.apache.syncope.client.console.wicket.extensions.markup.html.repeater.
 import org.apache.syncope.client.console.wicket.extensions.markup.html.repeater.data.table.TokenColumn;
 import org.apache.syncope.client.console.wicket.markup.html.bootstrap.dialog.BaseModal;
 import org.apache.syncope.client.console.wicket.markup.html.form.ActionLink;
-import org.apache.syncope.client.ui.commons.wizards.any.AnyWrapper;
 import org.apache.syncope.client.console.wizards.any.ResultPage;
 import org.apache.syncope.client.console.wizards.any.StatusPanel;
+import org.apache.syncope.client.ui.commons.Constants;
+import org.apache.syncope.client.ui.commons.status.ConnObjectWrapper;
+import org.apache.syncope.client.ui.commons.wizards.any.AnyWrapper;
 import org.apache.syncope.common.lib.SyncopeConstants;
 import org.apache.syncope.common.lib.to.AnyTO;
 import org.apache.syncope.common.lib.to.AnyTypeClassTO;
@@ -84,7 +86,7 @@ public abstract class AnyDirectoryPanel<A extends AnyTO, E extends AbstractAnyRe
      */
     protected final String type;
 
-    protected final BaseModal<Serializable> utilityModal = new BaseModal<>("outer");
+    protected final BaseModal<Serializable> utilityModal = new BaseModal<>(Constants.OUTER);
 
     protected AnyDirectoryPanel(final String id, final Builder<A, E> builder) {
         this(id, builder, true);
@@ -113,17 +115,6 @@ public abstract class AnyDirectoryPanel<A extends AnyTO, E extends AbstractAnyRe
         setWindowClosedReloadCallback(utilityModal);
 
         modal.size(Modal.Size.Large);
-        altDefaultModal.size(Modal.Size.Large);
-
-        this.pSchemaNames = new ArrayList<>();
-        AnyDirectoryPanelBuilder.class.cast(builder).getAnyTypeClassTOs()
-                .forEach(anyTypeClassTO -> this.pSchemaNames.addAll(anyTypeClassTO.getPlainSchemas()));
-        this.dSchemaNames = new ArrayList<>();
-        AnyDirectoryPanelBuilder.class.cast(builder).getAnyTypeClassTOs()
-                .forEach(anyTypeClassTO -> this.dSchemaNames.addAll(anyTypeClassTO.getDerSchemas()));
-
-        initResultTable();
-
         // change close callback in order to update header after model update
         modal.setWindowClosedCallback(new ModalWindow.WindowClosedCallback() {
 
@@ -132,36 +123,47 @@ public abstract class AnyDirectoryPanel<A extends AnyTO, E extends AbstractAnyRe
             @Override
             public void onClose(final AjaxRequestTarget target) {
                 if (actionTogglePanel.isVisibleInHierarchy() && modal.getContent() instanceof ResultPage) {
-                    actionTogglePanel.updateHeader(
-                            target, ResultPage.class.cast(modal.getContent()).getItem());
+                    actionTogglePanel.updateHeader(target, ResultPage.class.cast(modal.getContent()).getItem());
                 }
                 modal.show(false);
             }
         });
+
+        altDefaultModal.size(Modal.Size.Large);
+
+        this.pSchemaNames = AnyDirectoryPanelBuilder.class.cast(builder).getAnyTypeClassTOs().stream().
+                flatMap(anyTypeClassTO -> anyTypeClassTO.getPlainSchemas().stream()).collect(Collectors.toList());
+
+        this.dSchemaNames = AnyDirectoryPanelBuilder.class.cast(builder).getAnyTypeClassTOs().stream().
+                flatMap(anyTypeClassTO -> anyTypeClassTO.getDerSchemas().stream()).collect(Collectors.toList());
+
+        initResultTable();
+
+        SyncopeWebApplication.get().getAnyDirectoryPanelAdditionalActionsProvider().
+                add(this, modal, container, type, realm, fiql, pSchemaNames, dSchemaNames, pageRef);
     }
 
     @Override
     protected List<IColumn<A, String>> getColumns() {
-        final List<IColumn<A, String>> columns = new ArrayList<>();
-        final List<IColumn<A, String>> prefcolumns = new ArrayList<>();
-
+        List<IColumn<A, String>> columns = new ArrayList<>();
         columns.add(new KeyPropertyColumn<>(
                 new ResourceModel(Constants.KEY_FIELD_NAME, Constants.KEY_FIELD_NAME), Constants.KEY_FIELD_NAME));
 
+        List<IColumn<A, String>> prefcolumns = new ArrayList<>();
         PreferenceManager.getList(getRequest(), DisplayAttributesModalPanel.getPrefDetailView(type)).stream().
                 filter(name -> !Constants.KEY_FIELD_NAME.equalsIgnoreCase(name)).
-                forEachOrdered(name -> addPropertyColumn(
+                forEach(name -> addPropertyColumn(
                 name,
                 ReflectionUtils.findField(DisplayAttributesModalPanel.getTOClass(type), name),
                 prefcolumns));
 
         PreferenceManager.getList(getRequest(), DisplayAttributesModalPanel.getPrefPlainAttributeView(type)).stream().
-                filter(pSchemaNames::contains).
-                forEachOrdered(name -> prefcolumns.add(new AttrColumn<>(name, SchemaType.PLAIN)));
+                filter(name -> pSchemaNames.contains(name)).
+                map(name -> prefcolumns.add(new AttrColumn<>(name, SchemaType.PLAIN)));
 
         PreferenceManager.getList(getRequest(), DisplayAttributesModalPanel.getPrefDerivedAttributeView(type)).stream().
-                filter(dSchemaNames::contains).
-                forEachOrdered(name -> prefcolumns.add(new AttrColumn<>(name, SchemaType.DERIVED)));
+                filter(name -> (dSchemaNames.contains(name))).
+                forEach(name -> prefcolumns.add(new AttrColumn<>(name, SchemaType.DERIVED)));
 
         // Add defaults in case of no selection
         if (prefcolumns.isEmpty()) {
@@ -172,8 +174,9 @@ public abstract class AnyDirectoryPanel<A extends AnyTO, E extends AbstractAnyRe
                         prefcolumns);
             }
 
-            prefMan.setList(getRequest(), getResponse(), DisplayAttributesModalPanel.getPrefDetailView(type),
-                    List.of(getDefaultAttributeSelection()));
+            PreferenceManager.setList(
+                    getRequest(), getResponse(), DisplayAttributesModalPanel.getPrefDetailView(type),
+                    Arrays.asList(getDefaultAttributeSelection()));
         }
 
         columns.addAll(prefcolumns);
